--- a/contact.html
+++ b/contact.html
@@ -95,10 +95,9 @@
                 </div>
 
             </sidebar>
-
         </div>
-
-        <footer class="row footer navbar-fixed-bottom" style="background:grey;height:60px;text-align:center;padding-top:15px">
+        <!-- Footer -->
+        <footer class="row footer navbar-fixed-bottom" style="background:grey;height:60px;text-align:center;padding-top:15px;border-top:4px solid black">
             ©Copyright 2017 Mark Powalisz
 
         </footer>
