--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
             </sidebar>
 
         </div>
-
-        <footer class="row footer navbar-fixed-bottom" style="background:grey;height:60px;text-align:center;padding-top:15px">
+        <!-- Footer -->
+        <footer class="row footer navbar-fixed-bottom" style="background:grey;height:60px;text-align:center;padding-top:15px;border-top:4px solid black">
             ©Copyright 2017 Mark Powalisz
 
         </footer>
